--- a/index.html
+++ b/index.html
@@ -20,15 +20,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.crossOrigin="an
 
     <link rel="stylesheet" href="css/style.css" />
 
-    <script src="js/search.js"></script>
-    <script src="js/newsletter.js"></script>
+    <script defer src="js/search.js"></script>
+    <script defer src="js/newsletter.js"></script>
 
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" defer></script>
-    <script src="js/ux-analytics.js" defer></script>
+    <script defer src="https://code.jquery.com/jquery-3.7.1.min.js" defer></script>
+    <script defer src="js/ux-analytics.js" defer></script>
     <script>
-        if (location.pathname === "/") {
-          document.write(`\u003cscript src="https://slowfil.es/file?type=js&delay=1500"\u003e\u003c/script\u003e`);
-        }
+       if (location.pathname === "/") {
+        const script = document.createElement('script');
+        script.src = "https://slowfil.es/file?type=js&delay=1500";
+        script.defer = true;
+        document.body.appendChild(script);
+    }
     </script>
 </head>
 <body>
