Just a test message

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.crossOrigin="an
     </script>
 </head>
 <body>
-	<h2>TESTTTT</h2>
+
+	<h3>THIS IS JUST A TEST</h3>
     <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N3MTMLV8"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -49,7 +50,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 
 <div id="chat-container"></div>
-<script src="js/chat.js"></script>
+<script defer src="js/chat.js"></script>
 
     <header>
     	<div class="container">
