Adding defer to js

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     		</nav>
     	</div>
     </header><script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.js"></script>
-    <script src="js/home.js"></script>
-    <script src="js/general.js"></script>
-    <script src="js/destination-carousel.js"></script>
+    <script defer src="js/home.js"></script>
+    <script defer src="js/general.js"></script>
+    <script defer src="js/destination-carousel.js"></script>
     <main>
         <section class=" popular  cssanimation fadeIn">
     <ul>
