Changing from defer to async

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.crossOrigin="an
 
     <link rel="stylesheet" href="css/style.css" />
 
-    <script defer src="js/search.js"></script>
-    <script defer src="js/newsletter.js"></script>
+    <script async src="js/search.js"></script>
+    <script async src="js/newsletter.js"></script>
 
-    <script defer src="https://code.jquery.com/jquery-3.7.1.min.js" defer></script>
-    <script defer src="js/ux-analytics.js" defer></script>
+    <script async src="https://code.jquery.com/jquery-3.7.1.min.js" async></script>
+    <script async src="js/ux-analytics.js" async></script>
     <script>
        if (location.pathname === "/") {
         const script = document.createElement('script');
         script.src = "https://slowfil.es/file?type=js&delay=1500";
-        script.defer = true;
+        script.async = true;
         document.body.appendChild(script);
     }
     </script>
@@ -50,7 +50,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 
 <div id="chat-container"></div>
-<script defer src="js/chat.js"></script>
+<script async src="js/chat.js"></script>
 
     <header>
     	<div class="container">
@@ -74,9 +74,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     		</nav>
     	</div>
     </header><script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.js"></script>
-    <script defer src="js/home.js"></script>
-    <script defer src="js/general.js"></script>
-    <script defer src="js/destination-carousel.js"></script>
+    <script async src="js/home.js"></script>
+    <script async src="js/general.js"></script>
+    <script async src="js/destination-carousel.js"></script>
     <main>
         <section class=" popular  cssanimation fadeIn">
     <ul>
